bitfields/tests/compile_error_cases/errors/bitfield_disable_from_trait.stderr
error[E0277]: the trait bound `Bitfield: From<u64>` is not satisfied
  --> tests/compile_error_cases/errors/bitfield_disable_from_trait.rs:12:29
   |
12 |     let _b: Bitfield = 0u64.into();
   |                             ^^^^ unsatisfied trait bound
   |
help: the trait `From<u64>` is not implemented for `Bitfield`
  --> tests/compile_error_cases/errors/bitfield_disable_from_trait.rs:3:1
   |
 3 | #[bitfield(u64, from_traits = false)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `u64` to implement `Into<Bitfield>`
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
